added credential processor

--- a/Preuss.CredentialService/Preuss.CredentialService.csproj
+++ b/Preuss.CredentialService/Preuss.CredentialService.csproj
@@ -12,4 +12,15 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="Processors\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Processors\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Preuss.CredentialService.Abstracts\Preuss.CredentialService.Abstracts.csproj">
+      <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
+    </ProjectReference>
+  </ItemGroup>
 </Project>
