added connection string

--- a/Preuss.CredentialService/Preuss.CredentialService.csproj
+++ b/Preuss.CredentialService/Preuss.CredentialService.csproj
@@ -22,5 +22,11 @@
     <ProjectReference Include="..\Preuss.CredentialService.Abstracts\Preuss.CredentialService.Abstracts.csproj">
       <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
     </ProjectReference>
+    <ProjectReference Include="..\Preuss.CredentialService.MongoAccess.Abstracts\Preuss.CredentialService.MongoAccess.Abstracts.csproj">
+      <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
+    </ProjectReference>
+    <ProjectReference Include="..\Preuss.CredentialService.MongoAccess\Preuss.CredentialService.MongoAccess.csproj">
+      <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
+    </ProjectReference>
   </ItemGroup>
 </Project>
