added mongo db connection

--- a/Preuss.CredentialService.MongoAccess.Abstracts/Preuss.CredentialService.MongoAccess.Abstracts.csproj
+++ b/Preuss.CredentialService.MongoAccess.Abstracts/Preuss.CredentialService.MongoAccess.Abstracts.csproj
@@ -14,4 +14,7 @@
     <Folder Include="DataClasses\" />
     <Folder Include="Repositories\" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="MongoDB.Driver" Version="2.19.0" />
+  </ItemGroup>
 </Project>
