--- a/Preuss.CredentialService.MongoAccess/Preuss.CredentialService.MongoAccess.csproj
+++ b/Preuss.CredentialService.MongoAccess/Preuss.CredentialService.MongoAccess.csproj
@@ -15,4 +15,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Preuss.CredentialService.MongoAccess.Abstracts\Preuss.CredentialService.MongoAccess.Abstracts.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="MongoDB.Driver" Version="2.19.0" />
+  </ItemGroup>
 </Project>
