implemented credential processor

--- a/Preuss.CredentialService/Preuss.CredentialService.csproj
+++ b/Preuss.CredentialService/Preuss.CredentialService.csproj
@@ -28,5 +28,11 @@
     <ProjectReference Include="..\Preuss.CredentialService.MongoAccess\Preuss.CredentialService.MongoAccess.csproj">
       <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
     </ProjectReference>
+    <ProjectReference Include="..\Preuss.CredentialService.Cryptography.Abstracts\Preuss.CredentialService.Cryptography.Abstracts.csproj">
+      <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
+    </ProjectReference>
+    <ProjectReference Include="..\Preuss.CredentialService.Cryptography\Preuss.CredentialService.Cryptography.csproj">
+      <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
+    </ProjectReference>
   </ItemGroup>
 </Project>
