--- a/Preuss.CredentialService.Validation/Preuss.CredentialService.Validation.csproj
+++ b/Preuss.CredentialService.Validation/Preuss.CredentialService.Validation.csproj
@@ -7,12 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="Processors\" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Processors\" />
-  </ItemGroup>
-  <ItemGroup>
+    <ProjectReference Include="..\Preuss.CredentialService.Validation.Abstracts\Preuss.CredentialService.Validation.Abstracts.csproj" />
     <ProjectReference Include="..\Preuss.CredentialService.MongoAccess.Abstracts\Preuss.CredentialService.MongoAccess.Abstracts.csproj" />
   </ItemGroup>
 </Project>
