added credential controller

--- a/Preuss.CredentialService/Preuss.CredentialService.csproj
+++ b/Preuss.CredentialService/Preuss.CredentialService.csproj
@@ -34,5 +34,11 @@
     <ProjectReference Include="..\Preuss.CredentialService.Cryptography\Preuss.CredentialService.Cryptography.csproj">
       <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
     </ProjectReference>
+    <ProjectReference Include="..\Preuss.CredentialService.Validation.Abstracts\Preuss.CredentialService.Validation.Abstracts.csproj">
+      <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
+    </ProjectReference>
+    <ProjectReference Include="..\Preuss.CredentialService.Validation\Preuss.CredentialService.Validation.csproj">
+      <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
+    </ProjectReference>
   </ItemGroup>
 </Project>
